Agrego endpoint de agregar una observación.
